<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:id="@+id/list_item"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/meeting_icon_room"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_icon_room"
                android:text="A"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/meeting_subject_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="-"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/meeting_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24/01/2020"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="-"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/meeting_time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14:00"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/meeting_emails_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="a.katache@gmail.coma.katache@gmail.coma.katache@gmail.com"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="end">

            <ImageButton
                android:id="@+id/meeting_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_delete_black_24dp"
                android:layout_gravity="center"/>


        </LinearLayout>

    </LinearLayout>

