<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_new_meeting_save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Enregistrer">
    </item>
</menu>