<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="com.example.mareu.controllers.Fragments.MeetingFragment"
    android:id="@+id/meetings_rv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context=".controllers.fragments.MeetingFragment"
    tools:listitem="@layout/fragment_meeting" />