<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="Filtrer les réunions"/>

    <LinearLayout
        android:id="@+id/dialog_dates_spinner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selectionner une date :"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/dialog_dates_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_rooms_spinner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selectionner une salle :"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/dialog_rooms_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annuler"/>

        <Button
            android:id="@+id/dialog_confirm_button"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Filtrer"/>

    </LinearLayout>

</LinearLayout>
