<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Filtrer">
    </item>
</menu>